added countryName filtering for location/country
