# src/core/handlers/location/query-builder.ts
@@ -1,3 +1,4 @@
+import isNil from 'lodash/isNil';
 import { ILocationHandlersGetAllCountriesParams } from '../../interfaces';
 
 export interface ILocationQueryBuilder {
@@ -6,6 +7,13 @@ export interface ILocationQueryBuilder {
 
 export class LocationPostgresQueryBuilder implements ILocationQueryBuilder {
   getAllCountries(params: ILocationHandlersGetAllCountriesParams): string {
+    if (!isNil(params.countryName)) {
+      return `
+      SELECT * FROM countries
+      WHERE name ~* '${params.countryName}'
+      LIMIT ${params.limit} OFFSET ${params.skip};`;
+    }
+
     return `SELECT * FROM countries LIMIT ${params.limit} OFFSET ${params.skip};`;
   }
 }
