# src/servers/schemas/location.ts
@@ -5,4 +5,5 @@ const joi = j.extend(require('@hapi/joi-date')); // eslint-disable-line @typescr
 export const locationGetAllSchema = joi.object().keys({
   skip: joi.number().default(0),
   limit: joi.number().max(100).default(20),
+  countryName: joi.string().regex(/^[a-z\d\-_\s]+$/i),
 });
